// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic snapshot 1`] = `
<button
  className="MuiButtonBase-root-17 MuiButton-root-2 MuiButton-colorInherit-6"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-3"
  >
    Shop
  </span>
  <span
    className="MuiTouchRipple-root-20"
  />
</button>
`;

exports[`snapshot with related items 1`] = `
<button
  className="MuiButtonBase-root-17 MuiButton-root-2 MuiButton-colorInherit-6"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex="0"
  type="button"
>
  <span
    className="MuiButton-label-3"
  >
    Shop
    <svg
      aria-hidden="true"
      className="MuiSvgIcon-root-27"
      color={undefined}
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
      />
    </svg>
  </span>
  <span
    className="MuiTouchRipple-root-20"
  />
</button>
`;
